2011-11-17  Ulrich Drepper  <drepper@gmail.com>

	* Makefile.in: Remove CVSOPT handling.
	* configure.in: Remove use of AC_REVISION.
	* iconvdata/Makefile (distribute): No need to filter out CVS.
	* scripts/list-sources.sh: Remove CVS, subversion and monotone
	handling.

2011-11-16  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S
	[USE_AS_STRCASECMP_L]: Fix argument offsets for non-PIC.
	[USE_AS_STRNCASECMP_L]: Likewise.
	(__strcasecmp_ssse3, __strncasecmp_ssse3): Handle
	NO_TLS_DIRECT_SEG_REFS.
	* sysdeps/i386/i686/multiarch/strcmp-sse4.S [USE_AS_STRCASECMP_L]:
	Fix argument offsets for non-PIC.
	[USE_AS_STRNCASECMP_L]: Likewise.
	(__strcasecmp_sse4_2, __strncasecmp_sse4_2): Handle
	NO_TLS_DIRECT_SEG_REFS.

2011-11-15  Ulrich Drepper  <drepper@gmail.com>

	* locale/loadarchive.c (_nl_load_locale_from_archive): Open files with
	O_CLOEXEC.
	* locale/loadlocale.c (_nl_load_locale): Likewise.

2011-11-15  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/clock_gettime.c (SYSDEP_GETTIME_CPU)
	[__ASSUME_POSIX_CPU_TIMERS > 0]: Assign to retval and break.
	* sysdeps/unix/sysv/linux/x86_64/clock_gettime.c
	(SYSCALL_GETTIME): Set errno on error.

	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Properly
	count references to noai6ai_cached.

2011-11-15  Ulrich Drepper  <drepper@gmail.com>

	* time/getdate.c (__getdate_r): Set FD_CLOEXEC for given file.

	* sysdeps/unix/sysv/linux/readonly-area.c (__readonly_area): Set
	FD_CLOEXEC for /proc/self/maps.

	* sysdeps/unix/sysv/linux/getsysstats.c (phys_pages_info): Set
	FD_CLOEXEC for /proc/meminfo.

	* sysdeps/posix/getaddrinfo.c (gaiconf_init): Set FD_CLOEXEC for
	gai.conf.

	* resolv/res_query.c (res_hostalias):  Don't allow cancellation and set
	FD_CLOEXEC for given file.

	* resolv/res_hconf.c (do_init): Set FD_CLOEXEC for host.conf.

	* resolv/gethnamaddr.c (_sethtent): Don't allow cancellation and set
	FD_CLOEXEC for /etc/hosts.
	(_gethtent): Likewise.
